@@ -1001,7 +1001,7 @@ void BatchThreadDlg::StartThread()
 				else         m_pXFoilTask[it].setSequence(false, m_ClMin, m_ClMax, m_ClInc);
 
 
-				m_pXFoilTask[it].InitializeTask(pAnalysis->pFoil, pAnalysis->pPolar, true, m_bInitBL, m_bFromZero);
+				m_pXFoilTask[it].initializeTask(pAnalysis->pFoil, pAnalysis->pPolar, true, m_bInitBL, m_bFromZero);
 
 				//launch it
 				strong = "Starting "+pAnalysis->pFoil->m_FoilName+" / "+pAnalysis->pPolar->m_PlrName+"\n";
